--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
 <html>
   <head>
     <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
-    <script src="https://rawgit.com/jeromeetienne/AR.js/1.7.2/aframe/build/aframe-ar.min.js"></script>
   </head>
-  <body style="margin: 0; overflow: hidden;">
-    <a-scene embedded arjs>
+  <body>
+    <a-scene>
       <a-assets>
         <img id="image" src="SAM_0356.jpg" />
       </a-assets>
 
-      <a-marker preset="hiro">
-        <a-plane src="#image" position="0 0 0" rotation="-90 0 0" width="2" height="2"></a-plane>
-      </a-marker>
+      <a-light type="directional" position="1 1 1" intensity="1"></a-light>
 
-      <a-camera position="0 0 0"></a-camera>
+      <a-plane src="#image" position="0 1 -3" rotation="-90 0 0" width="2" height="2"></a-plane>
+
+      <a-camera position="0 1.6 0">
+        <a-cursor></a-cursor>
+      </a-camera>
     </a-scene>
   </body>
 </html>
